<resources>
    <string name="app_name">Gakko</string>
    //AuthActivity
    //SignIn
    <string name="whats_your_num">Enter your phone number</string>
    <string name="whats_your_num_subdesc">To continue using Gakko, we\'d like to send you an OTP to register your phone number</string>
    <string name="phone_hint">Phone Number</string>
    <string name="continue_btn">Continue</string>
    //Verify
    <string name="verify_title">Verify phone number</string>
    <string name="verify_desc">Check your SMS. We\'ve sent you an OTP at</string>
    <string name="didnt_receive_sms">Didn\'t receive SMS? <b>Resend Code</b></string>
    <string name="verify_btn">Verify</string>
    <string name="otp_hint">Enter OTP</string>
    //UserSetUp
    <string name="user_setup">User Profile Setup</string>
    <string name="user_setup_subtitle">Welcome to Gakko! Please fill in the details to continue</string>
    <string name="username">Name</string>
    <string name="display_name">Display Name</string>
    <string name="setup">Done</string>

    //HomeActivity
    //ThreadsFragment
    <string name="threads_default_title">Start a conversation with your class</string>
    <string name="threads_title">Threads</string>
    <string name="demo_number_of_comments">5 class comments</string>
    <string name="demo_thread_body">A paragraph is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</string>
    <string name="demo_user_name">Ajmal Sheikh</string>
    <string name="demo_user_designation">Teacher</string>
    <string name="demo_date">Today</string>
    //MembersFragment
    <string name="teachers_title">Teachers</string>
    <string name="students_title">Students</string>
    //CommentsFragment
    <string name="class_comments_title">Class Comments</string>
    <string name="comments_title_text">Comments</string>
    //NotificationFragment
    <string name="accept_request">Accept</string>
    <string name="decline_request">Decline</string>
    <string name="title">Notifications</string>
    <string name="no_notification_title">You are all caught up!</string>

    //ClassroomActivity
    //ClassroomDisplay
    <string name="classroom_display_title">Classrooms</string>
    <string name="add_class_btn">+ Add Class</string>
    <string name="join_class_btn">Join Class</string>
    <string name="create_class_btn">Create Class</string>
    <string name="not_part_of_class_title">You aren\'t part of any class yet.</string>
    //CreateClassroom
    <string name="create_classroom_title">Create Classroom</string>
    <string name="create_classroom_class_name">Classroom Title</string>
    <string name="create_classroom_class_coursecode">Course Code (Optional)</string>
    <string name="create_classroom_class_private">Private Classroom</string>
    <string name="create_classroom_class_create">Create</string>
    //JoinClassroom
    <string name="join_classroom_title">Join Classroom</string>
    <string name="join_classroom_class_code">Classroom Code</string>
    <string name="join_classroom_class_join_btn">Join</string>

    //Content Descriptions[Accessibility]
    <string name="add_class_btn_access">Add Class</string>

    //BottomNavigationBar
    <string name="classes_title">Classes</string>
    <string name="to_do_title">To-Do</string>
    <string name="notifications_title">Notifications</string>

    //MaterialFragment
    <string name="new_material_type_demo">New Assignment</string>
    <string name="material_title_hint">Title</string>
    <string name="material_due_date_hint">Due Date (dd/mm/yyyy)</string>
    <string name="material_topic_hint">Topic</string>

    //Pinboard Fragment
    <string name="demo_pinboard_text">No work has been created yet</string>

    //ProfileFragment
    <string name="back_title_text">Back</string>
    <string name="profile_title_text">Profile</string>
    <string name="logout_button">Log Out</string>
    <string name="update_profile_pic">Update Profile</string>
    <string name="demo_todo_text">You are all caught up!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //ExitClassroom
    <string name="exit_title">Exit Classroom</string>
    <string name="exit_title_sub">Are you sure do you want to quit this classroom?</string>
    <string name="exit_btn">Exit</string>
    <string name="cancel_btn">Cancel</string>



</resources>
