<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.classroom.classroomdisplay.ClassroomDisplay">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/classroom_display_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:listitem="@layout/classroom_display_item" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_classroom_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/add_class_btn_access"
        android:text="@string/add_class_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary_green"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/classroom_display_recycler"
        app:layout_constraintVertical_bias="0.923"
        app:shapeAppearanceOverlay="@style/AddClassroomOverlay" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/create_classroom_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/add_class_btn"
        android:text="@string/create_class_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_green"
        android:textSize="16sp"
        android:visibility="invisible"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/classroom_display_recycler"
        app:layout_constraintVertical_bias="0.923"
        app:shapeAppearanceOverlay="@style/CreateClassroomOverlay"
        tools:visibility="visible" />

    <View
        android:id="@+id/line_division"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/create_classroom_btn"
        app:layout_constraintEnd_toEndOf="@+id/join_classroom_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/join_classroom_btn" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/join_classroom_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/add_class_btn"
        android:text="@string/join_class_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_green"
        android:textSize="16sp"
        android:visibility="invisible"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/line_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/JoinClassroomOverlay"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/gakko"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/not_part_of_any_class_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/empty_inbox"
        app:layout_constraintBottom_toBottomOf="@+id/classroom_display_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/not_part_of_class_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/not_part_of_class_title"
        android:textColor="@color/primary_green"
        app:layout_constraintEnd_toEndOf="@+id/not_part_of_any_class_image"
        app:layout_constraintStart_toStartOf="@+id/not_part_of_any_class_image"
        app:layout_constraintTop_toBottomOf="@+id/not_part_of_any_class_image" />

</androidx.constraintlayout.widget.ConstraintLayout>